k8s/dev/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: infrago
spec:
  selector:
    matchLabels:
      app: infrago
  replicas: 2
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: infrago
    spec:
      terminationGracePeriodSeconds: 120
      containers:
        - name: infrago
          image: docker.io/moatorres/infrago:latest
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              memory: '64Mi'
              cpu: '250m'
            limits:
              memory: '64Mi'
              cpu: '250m'
          ports:
            - containerPort: 80
          lifecycle:
            postStart:
              exec:
                command: ['/bin/sh', '-c', 'echo infrago started']
            preStop:
              exec:
                command: ['/bin/sh', '-c', 'echo infrago stopped']
          readinessProbe:
            httpGet:
              port: 3000
              path: /healthz
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /healthz
              port: 3000
            initialDelaySeconds: 3
            periodSeconds: 3

---
apiVersion: v1
kind: Service
metadata:
  name: infrago
spec:
  selector:
    app: infrago
  type: NodePort
  ports:
    - port: 80
      targetPort: 3000
